# polynance

./: .gitignore  CRASH_ROOT_CAUSE.md  FIXES.md  README.md  STATISTICAL_ANALYSIS.md  analysis_breakdown.py  check_all_data.sh  diagnose.py  profit_target_pause_sim.py  pyproject.toml  test_market_refresh.py
.claude/: .smbdeleteAAA302086  .smbdeleteAAA305c4f  settings.local.json
analysis/: advanced_exits_sizing_backtest.py  advanced_strategies_backtest.py  advanced_strategy_ideas.py  backtest_analysis.py  backtest_suite.py  bet_sizing_backtest.py  confluence_analysis.py  confluence_clean.py  creative_backtest.py  drawdown_protection_backtest.py  early_exit_backtest.py  filter_backtest.py  final_config_backtest.py  fresh_sweep.py  honest_backtest.py  novel_signals_backtest.py  regime_adaptive_backtest.py  results_20260131_075733.json  results_20260131_075942.json  sizing_backtest.py  slippage_model.py  strategy_b_tuning.py  strategy_comparison_backtest.py  strategy_lab.py  strategy_lab_v2.py  strategy_reference.md  train_test_strategy_sweep.py  train_test_sweep_v2.py  valid_momentum_backtest.py
config/: ._config.json  config.json  config_A1_mom_0.03.json  config_A1_mom_0.05.json  config_A3_mom_sweet.json  config_A7_4agree_t5.json  config_B1_thresh85_daily50.json  config_B2_momentum_daily100.json  config_B3_antimart_daily100.json  config_B3_resolution_mom.json  config_C4_confidence_1.5x.json  config_C4_confidence_2.0x.json  config_C4_confidence_3.0x.json  config_D1_antimart_mom_daily.json  config_D2_resolution_mom_daily.json  config_D5_asym_mom_daily.json  trading.json  (+12 more)
(+895 files in other folders)
