[project]
name = "polynance"
version = "0.1.0"
description = "Polymarket 15-min crypto prediction logger and analysis tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "websockets>=12.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.8.0",
    "rich>=13.7.0",
    "plotext>=5.2.0",
    "python-dotenv>=1.0.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
live = [
    "pmxt>=2.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
polynance = "polynance.main:main"
polynance-analyze = "polynance.analyze:main"
polynance-trade = "polynance.trading.dry_run:main"
polynance-chart = "polynance.trading.chart:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polynance"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
